dev/test_programs/INVALID/group13/keyword_func.go
package main

func for() {
	println("hello")
}
